# blog

./: .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
leetcode/: binary_search.md  lcs.md  palindrome.md  reverse_sll.md  rod_cutting.md  twosum_ii.md
posts/: autograd.mdx  bayes_filter.md  config.md  estimators.md  grokking.md  hmm_demo.md  kalman.md  kalman_demo.md  kalman_filter_demo.md  linear.md  lru_cache.md  markov_chains.md  speedcorp.md  summer.md  tinyintro.md
public/posts/: xor.html
scripts/: create_post.py  ipynb2html.sh
src/app/: global.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/posts/[slug]/: page.tsx
src/blog/: __init__.py
src/components/: RepositoryCard.tsx
src/components/ui/: CopyButton.tsx  button.tsx
